--- a/templates/eid.html
+++ b/templates/eid.html
@@ -61,7 +61,7 @@
             color: purple;
         }
     </style>
-    <title>عيدية سمورة القمورة</title>
+    <title>عيدية </title>
 </head>
 <body>
 <div id="text-container">
